command to generate ebook documentation
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -283,6 +283,12 @@ $(patsubst %.txt,%.html,$(wildcard howto/*.txt)): %.html : %.txt
 	sed -e '1,/^$$/d' $< | $(ASCIIDOC) -b xhtml11 - >$@+ && \
 	mv $@+ $@
 
+book:
+	a2x -fpdf -dbook --fop captcp.txt
+
+ebook:
+	a2x -fepub -dbook captcp.txt
+
 # UNIMPLEMENTED
 #install-webdoc : html
 #	'$(SHELL_PATH_SQ)' ./install-webdoc.sh $(WEBDOC_DEST)
