--- a/Documentation/asciidoc.conf
+++ b/Documentation/asciidoc.conf
@@ -1,14 +1,14 @@
-## linkperf: macro
+# captcp: macro
 #
-# Usage: linkperf:command[manpage-section]
+# Usage: linkcaptcp:command[manpage-section]
 #
 # Note, {0} is the manpage section, while {target} is the command.
 #
-# Show PERF link as: <command>(<section>); if section is defined, else just show
+# Show CAPTCP link as: <command>(<section>); if section is defined, else just show
 # the command.
 
 [macros]
-(?su)[\\]?(?P<name>linkperf):(?P<target>\S*?)\[(?P<attrlist>.*?)\]=
+(?su)[\\]?(?P<name>linkcaptcp):(?P<target>\S*?)\[(?P<attrlist>.*?)\]=
 
 [attributes]
 asterisk=&#42;
@@ -19,7 +19,7 @@ endsb=&#93;
 tilde=&#126;
 
 ifdef::backend-docbook[]
-[linkperf-inlinemacro]
+[linkcaptcp-inlinemacro]
 {0%{target}}
 {0#<citerefentry>}
 {0#<refentrytitle>{target}</refentrytitle><manvolnum>{0}</manvolnum>}
@@ -27,7 +27,7 @@ ifdef::backend-docbook[]
 endif::backend-docbook[]
 
 ifdef::backend-docbook[]
-ifndef::perf-asciidoc-no-roff[]
+ifndef::captcp-asciidoc-no-roff[]
 # "unbreak" docbook-xsl v1.68 for manpages. v1.69 works with or without this.
 # v1.72 breaks with this because it replaces dots not in roff requests.
 [listingblock]
@@ -42,9 +42,9 @@ ifdef::doctype-manpage[]
 endif::doctype-manpage[]
 </literallayout>
 {title#}</example>
-endif::perf-asciidoc-no-roff[]
+endif::captcp-asciidoc-no-roff[]
 
-ifdef::perf-asciidoc-no-roff[]
+ifdef::captcp-asciidoc-no-roff[]
 ifdef::doctype-manpage[]
 # The following two small workarounds insert a simple paragraph after screen
 [listingblock]
@@ -63,7 +63,7 @@ ifdef::doctype-manpage[]
 {title#}</para></formalpara>
 {title%}<simpara></simpara>
 endif::doctype-manpage[]
-endif::perf-asciidoc-no-roff[]
+endif::captcp-asciidoc-no-roff[]
 endif::backend-docbook[]
 
 ifdef::doctype-manpage[]
@@ -74,9 +74,9 @@ template::[header-declarations]
 <refmeta>
 <refentrytitle>{mantitle}</refentrytitle>
 <manvolnum>{manvolnum}</manvolnum>
-<refmiscinfo class="source">perf</refmiscinfo>
-<refmiscinfo class="version">{perf_version}</refmiscinfo>
-<refmiscinfo class="manual">perf Manual</refmiscinfo>
+<refmiscinfo class="source">captcp</refmiscinfo>
+<refmiscinfo class="version">{captcp_version}</refmiscinfo>
+<refmiscinfo class="manual">captcp Manual</refmiscinfo>
 </refmeta>
 <refnamediv>
   <refname>{manname}</refname>
@@ -86,6 +86,6 @@ endif::backend-docbook[]
 endif::doctype-manpage[]
 
 ifdef::backend-xhtml11[]
-[linkperf-inlinemacro]
+[linkcaptcp-inlinemacro]
 <a href="{target}.html">{target}{0?({0})}</a>
 endif::backend-xhtml11[]
