documentation: captcp show
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -1,8 +1,12 @@
+all: pdf webpage
+
 pdf:
 	a2x -fpdf -dbook --fop captcp.txt
 
 webpage:
 	a2x --format=xhtml --xsltproc-opts "--stringparam part.autolabel 0 --stringparam chapter.autolabel 0 --stringparam section.autolabel.max.depth 0 --stringparam toc.section.depth 1" --stylesheet css/style.css captcp.txt
+
+
 
 
 clean:
